// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render a button with a simple text 1`] = `
<Button
  buttonComponentProps={
    Object {
      "onClick": [Function],
    }
  }
  iconAlignment="left"
  id="test-button"
  type="neutral"
>
  <BaseButton
    buttonComponentProps={
      Object {
        "onClick": [Function],
      }
    }
    iconAlignment="left"
    id="test-button"
    render={[Function]}
    type="neutral"
  >
    <button
      className="button neutral"
      onClick={[Function]}
    >
      testing testing 123
    </button>
  </BaseButton>
</Button>
`;

exports[`<Button /> should render a button with a size large 1`] = `
<Button
  buttonComponentProps={
    Object {
      "onClick": [Function],
    }
  }
  iconAlignment="left"
  id="test-button-large"
  size="large"
  type="neutral"
>
  <BaseButton
    buttonComponentProps={
      Object {
        "onClick": [Function],
      }
    }
    iconAlignment="left"
    id="test-button-large"
    render={[Function]}
    size="large"
    type="neutral"
  >
    <button
      className="button large neutral"
      onClick={[Function]}
    >
      testing testing 123
    </button>
  </BaseButton>
</Button>
`;

exports[`<Button /> should render a button with a type delete-subtle 1`] = `
<Button
  buttonComponentProps={
    Object {
      "onClick": [Function],
    }
  }
  iconAlignment="left"
  id="test-button-delete-subtle"
  type="delete-subtle"
>
  <BaseButton
    buttonComponentProps={
      Object {
        "onClick": [Function],
      }
    }
    iconAlignment="left"
    id="test-button-delete-subtle"
    render={[Function]}
    type="delete-subtle"
  >
    <button
      className="button delete-subtle"
      onClick={[Function]}
    >
      testing testing 123
    </button>
  </BaseButton>
</Button>
`;

exports[`<Button /> should render a button with an icon 1`] = `
.c0.fa {
  margin-right: 3px;
  font-size: 1rem;
}

<Button
  icon={
    <FontAwesomeIcon
      type="star"
    />
  }
  iconAlignment="right"
  id="test-button-icon"
  type="primary-hollow"
>
  <BaseButton
    icon={
      <FontAwesomeIcon
        type="star"
      />
    }
    iconAlignment="right"
    id="test-button-icon"
    render={[Function]}
    type="primary-hollow"
  >
    <button
      className="button primary-hollow"
    >
      primary-hollow
      <span
        className="button-icon right"
      >
        <FontAwesomeIcon
          type="star"
        >
          <Icon
            isSpinning={false}
            size="medium"
            type="fa-star"
          >
            <styled.i
              aria-hidden={true}
              className="icon fa fa-star"
              size="medium"
            >
              <i
                aria-hidden={true}
                className="icon fa fa-star c0"
                size="medium"
              />
            </styled.i>
          </Icon>
        </FontAwesomeIcon>
      </span>
    </button>
  </BaseButton>
</Button>
`;

exports[`<Button /> should render a disabled button 1`] = `
<Button
  buttonComponentProps={
    Object {
      "disabled": true,
      "onClick": [Function],
    }
  }
  iconAlignment="left"
  id="test-button-disabled"
  type="neutral"
>
  <BaseButton
    buttonComponentProps={
      Object {
        "disabled": true,
        "onClick": [Function],
      }
    }
    iconAlignment="left"
    id="test-button-disabled"
    render={[Function]}
    type="neutral"
  >
    <button
      className="button neutral"
      disabled={true}
      onClick={[Function]}
    >
      testing testing 123
    </button>
  </BaseButton>
</Button>
`;
